[tool.poetry]
name = "congresso_utils"
version = "0.1.0"
description = "Conjunto de scripts utilitários para uso em outros repositórios do Beabá Parlamentar."
license = "LGPL-3.0-or-later"
authors = ["Matheus Alves <matheusalves@copin.ufcg.edu.br>"]
repository = "https://github.com/beabaparlamentar/congresso-utils"
keywords = ["congresso-nacional", "parlamentares", "utils"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
